更新了nuget库，登录模块放到了一个ChildWindow里面

--- a/CSharp/App/Editor/Shell.xaml
+++ b/CSharp/App/Editor/Shell.xaml
@@ -3,8 +3,8 @@
 		xmlns:prism="http://www.codeplex.com/prism" Title="Editor" Height="800" Width="1280"
 		WindowStartupLocation="CenterScreen">
 	<Grid>
-		<!--<ContentControl Name="robot" prism:RegionManager.RegionName="RobotRegion" />-->
-		<TabControl>
+		<ContentControl Name="robot" prism:RegionManager.RegionName="RobotRegion" />
+		<!--<TabControl>
 			<TabItem Height="25" Width="80" Header="机器人">
 				<ContentControl Name="robot" prism:RegionManager.RegionName="RobotRegion" />
 			</TabItem>
@@ -14,6 +14,6 @@
 			<TabItem Height="25" Width="80" Header="外挂">
 				<ContentControl Name="waigua" prism:RegionManager.RegionName="WaiGuaRegion" />
 			</TabItem>
-		</TabControl>
+		</TabControl>-->
 	</Grid>
 </Window>
