--- a/CSharp/App/Modules/Login/LoginView.xaml
+++ b/CSharp/App/Modules/Login/LoginView.xaml
@@ -1,13 +1,15 @@
-﻿<UserControl x:Class="Modules.Robot.LoginView"
+﻿<UserControl x:Class="Modules.Login.LoginView"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 		xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
+		xmlns:Login="clr-namespace:Modules.Login"
 		mc:Ignorable="d" 
-		d:DesignHeight="300" d:DesignWidth="300">
+		d:DesignHeight="300" d:DesignWidth="300" 
+		d:DataContext="{d:DesignInstance Login:LoginViewModel}">
 	<Grid>
-		<xctk:ChildWindow Name="cwLoginWindow"  Visibility="{Binding GridLoginVisiable}" 
+		<xctk:ChildWindow Name="cwLoginWindow"  Visibility="{Binding LoginWindowVisiable}" 
 				HorizontalAlignment="Center" VerticalAlignment="Center" CloseButtonVisibility="Hidden">
 			<Grid Name="gridLogin"  Width="200" Height="120" >
 				<Grid.RowDefinitions>
