--- a/CSharp/App/Modules/Robot/RobotView.xaml
+++ b/CSharp/App/Modules/Robot/RobotView.xaml
@@ -7,25 +7,6 @@
 		mc:Ignorable="d" 
 		d:DesignHeight="600" d:DesignWidth="1280" d:DataContext="{d:DesignInstance Robot:RobotViewModel}">
 	<Grid>
-		<!--<xctk:ChildWindow Name="cwLoginWindow"  Visibility="{Binding GridLoginVisiable}" 
-				HorizontalAlignment="Center" VerticalAlignment="Center" CloseButtonVisibility="Hidden">
-			<Grid Name="gridLogin"  Width="200" Height="120" >
-				<Grid.RowDefinitions>
-					<RowDefinition></RowDefinition>
-					<RowDefinition></RowDefinition>
-					<RowDefinition></RowDefinition>
-				</Grid.RowDefinitions>
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="10*"></ColumnDefinition>
-					<ColumnDefinition Width="40*"></ColumnDefinition>
-				</Grid.ColumnDefinitions>
-				<Label Content="帐号: " Grid.Row="0" Grid.Column="0" Margin="0,8"/>
-				<TextBox Text="{Binding Account}" Grid.Row="0" Grid.Column="1" Margin="0,8,0,8" />
-				<Label Content="密码: " Grid.Row="1" Grid.Column="0" Margin="0,8"/>
-				<TextBox Text="{Binding Password}" Grid.Row="1" Grid.Column="1" Margin="0,8,0,8" />
-				<Button Name="btnLogin" Content="登录" Click="btnLogin_Click" Grid.Row="2" Grid.Column="1" Margin="12,8" />
-			</Grid>
-		</xctk:ChildWindow>-->
 		<DockPanel Name="dock" Visibility="{Binding DockPanelVisiable}">
 			<Menu DockPanel.Dock="Top" >
 				<MenuItem Header="登录" Name="menuLogin" Click="menuLogin_Click" ></MenuItem>
@@ -33,15 +14,8 @@
 			<StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Height="27" >
 				<Button Name="btnServers" Content="服务器列表" Click="btnServers_Click" ></Button>
 				<Button Name="btnReload" Content="Reload" Click="btnReload_Click" ></Button>
-				<ComboBox Name="cbFindType" SelectedIndex="{Binding FindTypeIndex}">
-					<ComboBoxItem Content="帐号"></ComboBoxItem>
-					<ComboBoxItem Content="名字"></ComboBoxItem>
-					<ComboBoxItem Content="GUID"></ComboBoxItem>
-				</ComboBox>
-				<TextBox Width="120" Text="{Binding FindType}" />
-				<Button Name="btnFind" Content="查询" Click="btnFind_Click" ></Button>
 			</StackPanel>
-			<ListBox Width="100" SelectionMode="Multiple" ItemsSource="{Binding ServerInfos}" 
+			<ListBox Width="119" SelectionMode="Multiple" ItemsSource="{Binding ServerInfos}" 
 					d:DataContext="{d:DesignInstance Robot:RobotViewModel}" >
 				<ListBox.ItemTemplate>
 					<DataTemplate>
@@ -49,7 +23,36 @@
 					</DataTemplate>
 				</ListBox.ItemTemplate>
 			</ListBox>
-			<Grid />
+			<Grid>
+				<Canvas>
+					<ComboBox x:Name="cbFindType" SelectedIndex="{Binding FindTypeIndex}" Canvas.Left="42" Canvas.Top="19">
+						<ComboBoxItem Content="帐号"/>
+						<ComboBoxItem Content="名字"/>
+						<ComboBoxItem Content="GUID"/>
+					</ComboBox>
+					<TextBox Width="120" Text="{Binding FindType}" Canvas.Left="103" Canvas.Top="20" />
+					<Button Name="btnFind" Content="查询" Click="btnFind_Click" Canvas.Left="239" Canvas.Top="20" ></Button>
+					<GroupBox Header="角色信息" Canvas.Left="42" Canvas.Top="57" Height="163" Width="243">
+						<Grid Margin="0,10,0,0">
+							<Grid.RowDefinitions>
+								<RowDefinition></RowDefinition>
+								<RowDefinition></RowDefinition>
+								<RowDefinition></RowDefinition>
+							</Grid.RowDefinitions>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="67*"></ColumnDefinition>
+								<ColumnDefinition Width="190*"></ColumnDefinition>
+							</Grid.ColumnDefinitions>
+							<Label Content="帐号:" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="36" />
+							<TextBox Text="{Binding Account}"  Grid.Row="0" Grid.Column="1" Margin="0,8" />
+							<Label Content="名字:" Grid.Row="1" Grid.Column="0" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center" Height="23" Width="36" />
+							<TextBox Text="{Binding Name}" Grid.Row="1" Grid.Column="1" Margin="0,8" />
+							<Label Content="GUID:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="44" />
+							<TextBox Text="{Binding Guid}" Grid.Row="2" Grid.Column="1" Margin="0,8"/>
+						</Grid>
+					</GroupBox>
+				</Canvas>
+			</Grid>
 		</DockPanel>
 	</Grid>
 </UserControl>
