--- a/CSharp/App/Editor/Shell.xaml
+++ b/CSharp/App/Editor/Shell.xaml
@@ -3,18 +3,7 @@
 		xmlns:prism="http://www.codeplex.com/prism" Title="Editor" Height="800" Width="1280"
 		WindowStartupLocation="CenterScreen">
 	<Grid>
-		<ContentControl Name="login" prism:RegionManager.RegionName="LoginRegion" />
-		<ContentControl Name="robot" prism:RegionManager.RegionName="RobotRegion" />
-		<!--<TabControl>
-			<TabItem Height="25" Width="80" Header="机器人">
-				<ContentControl Name="robot" prism:RegionManager.RegionName="RobotRegion" />
-			</TabItem>
-			<TabItem Height="25" Width="80" Header="行为树">
-				<ContentControl Name="treeCanvas" prism:RegionManager.RegionName="TreeCanvasRegion" />
-			</TabItem>
-			<TabItem Height="25" Width="80" Header="外挂">
-				<ContentControl Name="waigua" prism:RegionManager.RegionName="WaiGuaRegion" />
-			</TabItem>
-		</TabControl>-->
+		<ContentControl Name="login" prism:RegionManager.RegionName="LoginRegion" HorizontalAlignment="Center" VerticalAlignment="Center" />
+		<ContentControl Name="robot" prism:RegionManager.RegionName="RobotRegion" HorizontalAlignment="Left" VerticalAlignment="Top" />
 	</Grid>
 </Window>
