--- a/CSharp/App/Modules/Robot/RobotView.xaml
+++ b/CSharp/App/Modules/Robot/RobotView.xaml
@@ -17,6 +17,21 @@
 			<Robot:ComboBoxForbiddenType Name="匹配" Value="forbid_match"></Robot:ComboBoxForbiddenType>
 			<Robot:ComboBoxForbiddenType Name="聊天" Value="forbid_chat"></Robot:ComboBoxForbiddenType>
 		</x:Array>
+
+		<Style x:Key="textBoxInError" TargetType="{x:Type TextBox}">
+			<Style.Triggers>
+				<Trigger Property="Validation.HasError" Value="true">
+					<Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self},
+                        Path=(Validation.Errors)[0].ErrorContent}"/>
+				</Trigger>
+			</Style.Triggers>
+		</Style>
+		<ControlTemplate x:Key="numberValidationTemplate">
+			<DockPanel>
+				<AdornedElementPlaceholder DockPanel.Dock="Left"/>
+				<TextBlock Foreground="Red" FontSize="20" >请输入数字!</TextBlock>
+			</DockPanel>
+		</ControlTemplate>
 	</UserControl.Resources>
 	<Grid>
 		<DockPanel x:Name="dock" Visibility="{Binding DockPanelVisiable}">
@@ -57,7 +72,7 @@
 						</TabItem>
 						<TabItem Header="角色">
 							<Canvas>
-								<GroupBox Header="角色信息" Canvas.Left="10" Height="723" Width="734" BorderBrush="BurlyWood">
+								<GroupBox Header="角色信息" Canvas.Left="10" Height="667" Width="837" BorderBrush="BurlyWood">
 									<Canvas>
 										<ComboBox x:Name="cbFindType" SelectedIndex="{Binding FindTypeIndex}" Canvas.Left="32" Canvas.Top="23" Height="25">
 											<ComboBoxItem Content="帐 号"/>
@@ -72,9 +87,51 @@
 										<TextBox Text="{Binding Name}" Grid.Row="2" Grid.Column="1" IsReadOnly="True" Height="25" Canvas.Left="88" Canvas.Top="84" Width="204"/>
 										<Label Content="GUID:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center" Canvas.Left="32" Canvas.Top="114" />
 										<TextBox Text="{Binding Guid}" Grid.Row="3" Grid.Column="1" IsReadOnly="True" Height="25" Canvas.Left="88" Canvas.Top="114" Width="204"/>
-										<TabControl Name="tcCharacterInfo" Height="541" Canvas.Top="160" Width="722" IsEnabled="False">
-											<TabItem Header="信息">
-												<Grid Margin="0,0,8,36"/>
+										<TabControl Name="tcCharacterInfo" Height="475" Canvas.Top="160" Width="815" IsEnabled="False">
+											<TabItem Header="邮件">
+												<Canvas>
+													<GroupBox Header="发送邮件" Canvas.Left="10" Canvas.Top="10" Height="279" Width="323">
+														<Canvas>
+															<Label Content="主   题:" Canvas.Left="10" Canvas.Top="7" />
+															<TextBox Text="{Binding Subject}" Height="23" Canvas.Left="63" Canvas.Top="10" Width="154" />
+															<TextBox Text="{Binding Content}" Height="124" Canvas.Left="10" Canvas.Top="38" Width="291" />
+															<Label Content="邮件内容:" Canvas.Left="222" Canvas.Top="7"/>
+															<Label Content="免费元宝:" Canvas.Left="10" Canvas.Top="164"/>
+															<Label Content="银   两:" Canvas.Left="160" Canvas.Top="167" />
+															<Label Content="物品ID:" Canvas.Left="10" Canvas.Top="198"/>
+															<TextBox Height="23" Canvas.Left="63" Canvas.Top="167" Width="92" Validation.ErrorTemplate="{StaticResource numberValidationTemplate}" Style="{StaticResource textBoxInError}">
+																<Binding Path="FreeGold" UpdateSourceTrigger="PropertyChanged" >
+																	<Binding.ValidationRules>
+																		<Robot:NumValidation />
+																	</Binding.ValidationRules>
+																</Binding>
+															</TextBox>
+															<TextBox Height="23" Canvas.Left="213" Canvas.Top="167" Width="92" Validation.ErrorTemplate="{StaticResource numberValidationTemplate}" Style="{StaticResource textBoxInError}">
+																<Binding Path="Silver" UpdateSourceTrigger="PropertyChanged" >
+																	<Binding.ValidationRules>
+																		<Robot:NumValidation />
+																	</Binding.ValidationRules>
+																</Binding>
+															</TextBox>
+															<TextBox Height="23" Canvas.Left="64" Canvas.Top="198" Width="92" Validation.ErrorTemplate="{StaticResource numberValidationTemplate}" Style="{StaticResource textBoxInError}">
+																<Binding Path="ItemID" UpdateSourceTrigger="PropertyChanged" >
+																	<Binding.ValidationRules>
+																		<Robot:NumValidation />
+																	</Binding.ValidationRules>
+																</Binding>
+															</TextBox>
+															<TextBox Height="23" Canvas.Left="213" Canvas.Top="198" Width="92" Validation.ErrorTemplate="{StaticResource numberValidationTemplate}" Style="{StaticResource textBoxInError}">
+																<Binding Path="ItemCount" UpdateSourceTrigger="PropertyChanged" >
+																	<Binding.ValidationRules>
+																		<Robot:NumValidation />
+																	</Binding.ValidationRules>
+																</Binding>
+															</TextBox>
+															<Label Content="数   量:" Canvas.Left="160" Canvas.Top="198"/>
+															<Button Name="btnSendMail" Content="发送" Canvas.Left="10" Canvas.Top="229" Width="75" Click="btnSendMail_Click" />
+														</Canvas>
+													</GroupBox>
+												</Canvas>
 											</TabItem>
 											<TabItem Header="包裹">
 												<Grid/>
@@ -85,19 +142,15 @@
 											<TabItem Header="装备">
 												<Canvas/>
 											</TabItem>
-											<TabItem Header="GM">
-												<Canvas>
-													<Button x:Name="btnForbiddenBuy" Content="禁止" Canvas.Left="186" Canvas.Top="40" Width="75" Click="btnForbidCharacter_Click" />
-													<Button x:Name="btnAllowBuy" Content="允许" Canvas.Left="186" Canvas.Top="10" Width="75" Click="btnAllowCharacter_Click" />
-													<ComboBox Name="cbForbiddenType" SelectedIndex="0" Canvas.Left="61" Canvas.Top="11" Width="120" 
-															ItemsSource="{StaticResource ResourceKey=ComboBoxCharacterForbiddenTypeKey}" 
-															DisplayMemberPath="Name" SelectedValuePath="Value" />
-													<TextBox Name="tbForbiddenTime" Height="23" Canvas.Left="61" Canvas.Top="40" Width="120"/>
-													<Label Content="类型:" Canvas.Left="10" Canvas.Top="11"/>
-													<Label Content="时间:" Canvas.Left="10" Canvas.Top="37"/>
-												</Canvas>
-											</TabItem>
 										</TabControl>
+										<Button Name="btnForbidCharacter" IsEnabled="False" Content="禁止" Canvas.Left="495" Canvas.Top="55" Width="75" Click="btnForbidCharacter_Click" />
+										<Button Name="btnAllowCharacter" IsEnabled="False" Content="允许" Canvas.Left="495" Canvas.Top="25" Width="75" Click="btnAllowCharacter_Click" />
+										<ComboBox x:Name="cbForbiddenType" SelectedIndex="0" Canvas.Left="370" Canvas.Top="26" Width="120" 
+											ItemsSource="{StaticResource ResourceKey=ComboBoxCharacterForbiddenTypeKey}" 
+											DisplayMemberPath="Name" SelectedValuePath="Value" />
+										<TextBox x:Name="tbForbiddenTime" Height="23" Canvas.Left="370" Canvas.Top="55" Width="120"/>
+										<Label Content="类型:" Canvas.Left="319" Canvas.Top="26"/>
+										<Label Content="时间:" Canvas.Left="319" Canvas.Top="52"/>
 									</Canvas>
 								</GroupBox>
 							</Canvas>
