--- a/CSharp/App/Modules/WCFClient/WCFClientView.xaml
+++ b/CSharp/App/Modules/WCFClient/WCFClientView.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="Modules.WCFClient.WCFClientView"
+﻿<UserControl
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+		xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" x:Class="Modules.WCFClient.WCFClientView" 
 		mc:Ignorable="d" 
 		d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-		<Button Content="Button" HorizontalAlignment="Left" Margin="108,118,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+	<Grid>
+		<Button Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 	</Grid>
 </UserControl>
