--- a/CSharp/App/Modules/Tree/BehaviorTreeView.xaml
+++ b/CSharp/App/Modules/Tree/BehaviorTreeView.xaml
@@ -2,8 +2,8 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-		xmlns:BehaviorTree="clr-namespace:Modules.BehaviorTree" 
-		x:Class="Modules.BehaviorTree.BehaviorTreeView"
+		xmlns:BehaviorTree="clr-namespace:Modules.Tree" 
+		x:Class="Modules.Tree.BehaviorTreeView"
 		mc:Ignorable="d" 
 		d:DesignHeight="600" 
 		d:DesignWidth="800" 
