--- a/CSharp/App/Modules/Login/LoginView.xaml
+++ b/CSharp/App/Modules/Login/LoginView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Modules.Login.LoginView"
+﻿<UserControl x:Class="Login.LoginView"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 		xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
-		xmlns:Login="clr-namespace:Modules.Login"
+		xmlns:Login="clr-namespace:Login"
 		mc:Ignorable="d" 
 		d:DesignHeight="300" d:DesignWidth="300" 
 		d:DataContext="{d:DesignInstance Login:LoginViewModel}">
