--- a/CSharp/App/Modules/WCFClient/WCFClientView.xaml
+++ b/CSharp/App/Modules/WCFClient/WCFClientView.xaml
@@ -3,7 +3,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-		x:Class="Modules.WCFClient.WCFClientView" 
+		x:Class="WCFClient.WCFClientView" 
 		mc:Ignorable="d" 
 		d:DesignHeight="300" d:DesignWidth="300">
 	<Grid>
